--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button id="toggleMode">Night Mode</button>
             </div>
 
-            <!-- Two Month Calendars -->
+            <!-- Two Month Calendars Vertically -->
             <div class="calendars">
                 <div class="calendar" id="calendar1"></div>
                 <div class="calendar" id="calendar2"></div>
