--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,24 +12,19 @@
         <h1>Exam Countdown Calendar</h1>
         
         <div class="calendar-container">
-            <!-- Upcoming Exams List -->
+            <!-- Calendar -->
+            <div class="calendar-controls">
+                <button id="prevMonth">Previous</button>
+                <h2 id="currentMonth"></h2>
+                <button id="nextMonth">Next</button>
+                <button id="toggleMode">Night Mode</button>
+            </div>
+            <div class="calendar" id="calendar"></div>
+
+            <!-- Countdown Box -->
             <div class="countdown-box" id="countdown-box">
                 <h2>Upcoming Exams</h2>
                 <ul id="countdown-list"></ul>
-            </div>
-
-            <!-- Two Month Calendars on the Right -->
-            <div class="calendars">
-                <!-- Calendar 1 -->
-                <div class="calendar-wrapper">
-                    <h2 id="currentMonth"></h2>
-                    <div class="calendar" id="calendar1"></div>
-                </div>
-                <!-- Calendar 2 -->
-                <div class="calendar-wrapper">
-                    <h2 id="nextMonthTitle"></h2>
-                    <div class="calendar" id="calendar2"></div>
-                </div>
             </div>
         </div>
     </div>
@@ -40,3 +36,6 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
+
+
